k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyego-app
  namespace: eyego
  labels:
    app: eyego-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eyego-app
  template:
    metadata:
      labels:
        app: eyego-app
    spec:
      containers:
      - name: eyego-app
        image: 880958246029.dkr.ecr.eu-north-1.amazonaws.com/eyego-devops-task:latest
        ports:
        - containerPort: 3000
