k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: eyego-service
  namespace: eyego
spec:
  selector:
    app: eyego-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
